2005-05-19	Rupert Germann <rupi@gmx.li>
	* feature: added support for Workspaces in TYPO3 4.0
	* fix: changed TYPO3_version and PHP_version in $emconf
	* updated emconf: version nr is 2.2.40 now

2005-11-12	Ingo Renner  <typo3@ingo-renner.com>

	* FIX fixed bug 0001718: Stil alt in a-tag
	* FIX fixed bug 0001743: news_files field (tinyblob) too small
	
2005-11-05	Ingo Renner  <typo3@ingo-renner.com>

	* FIX fixed bug 0001777: Icon for news with "futuretiming" is missing

2005-10-10	Ingo Renner  <typo3@ingo-renner.com>

	* FIX fixed bug 0001313: tt_news rss feeds not rss 2.0 compliant
	* CHG feed templates now the same as in TER

2005-09-30	Ingo Renner  <typo3@ingo-renner.com>

	* FIX removed alt attribute in catmenu which is not allowed for anchor tags

2005-05-19	rupertgermann
	* cvsroot/typo3xdev/tx_ttnews/ext_emconf.php 1.41:
		- raised version number to 2.2.5

	* cvsroot/typo3xdev/tx_ttnews/locallang.php 1.23:
	* cvsroot/typo3xdev/tx_ttnews/locallang_csh_ttnews.php 1.12:
	* cvsroot/typo3xdev/tx_ttnews/locallang_csh_ttnewscat.php 1.6:
	* cvsroot/typo3xdev/tx_ttnews/locallang_tca.php 1.36:
	* cvsroot/typo3xdev/tx_ttnews/pi/locallang.php 1.23:
		- added new language files from TER

2005-05-17	rupertgermann
	* cvsroot/typo3xdev/tx_ttnews/pi/class.tx_ttnews.php 1.101:
		- fix: prevented adding of the GETvars "pS", "pL" and "arc" to 
		links to the single view with this configuration for links: 
		dontUseBackPid=0 and useHRDatesSingle=1.

	* cvsroot/typo3xdev/tx_ttnews/ext_conf_template.txt 1.9:
	* cvsroot/typo3xdev/tx_ttnews/ext_tables.php 1.25:
		- added a new option to the extension configuration: the "
		prependAtCopy" feature which adds the string "(copy [#])" to 
		titles of copied records is configurable now. If prefixLangTitle 
		is disabled it is useful to disable prependAtCopy too, otherwise 
		"(copy [#])" is also added to localizations.

	* cvsroot/typo3xdev/tx_ttnews/class.tx_ttnews_catmenu.php 1.2: